<resources>
    <string name="app_name">SolarApps</string>
    <string name="title_activity_home">SolarApps</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_search">Search</string>
    <string name="title_activity_cart">My Cart</string>
    <string name="title_activity_login_register">Log In</string>

    <string name="loading">Please wait.</string>
    <string name="currency">INR :  </string>
    <string name="wgt">wgt :  </string>
    <string name="help_support">Help \u0026 Support</string>
    <string name="contact_us">Contact Us</string>
    <string name="writetous">Write to Us</string>
    <string name="help_center">Help Center</string>
    <string name="title_activity_about_us">AboutUs</string>
    <string name="copy_right" translatable="false">Copyrights © %1$d</string>
    <string name="fragment_tab_home_direct_message_button_label">Select a contact</string>
    <string name="fragment_user_profile_id_label">ID</string>
    <string name="fragment_user_profile_logout_label">logout</string>


    <string name="tag_home" translatable="false">TAB_HOME</string>
    <string name="tag_chat" translatable="false">TAB_CHAT</string>
    <string name="tag_profile" translatable="false">TAB_PROFILE</string>

    <string name="tab_home_title" translatable="false">Home</string>
    <string name="tab_chat_title" translatable="false">Chat</string>
    <string name="tab_profile_title" translatable="false">Profile</string>

    <!--just uncomment(comment) one of these to display(or not) the relative tab within the adapter-->
    <string-array name="tab_tags" translatable="false">
        <item>@string/tag_home</item>
        <item>@string/tag_chat</item>
        <item>@string/tag_profile</item>
    </string-array>
    <string name="title_activity_splash">SplashActivity</string>

    <!--Intro slider texts -->
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Vegetables</string>
    <string name="slide_1_desc">Shop from a wide range of fresh and exotic vegetables online</string>

    <string name="slide_2_title">Fruits</string>
    <string name="slide_2_desc">Fruits are available in this online fruit shop. Buy fresh fruits &amp; healthy fruits online at best price from this best fruit shop &amp; fill your fruit basket.</string>

    <string name="slide_3_title">Great Discounts</string>
    <string name="slide_3_desc">Best discounts on every Items!</string>

    <string name="slide_4_title">Free Delivery</string>
    <string name="slide_4_desc">Free delivery Items on Every weekend only!</string>




    <string name="setble">Setup Bluetooth</string>
    <string name="manage_profile">Manage Profile</string>
    <string name="monitor">Monitoring Energy</string>
    <string name="setwifi">Setup wifi</string>

    <string name="welcome">Welcome!</string>
    <string name="welcomeMsg">Please Setup Bluetooth and Wifi for Energy Monitoring! </string>
    <string name="profile">Profile</string>
    <string name="dashboard">DashBoard</string>
    <string name="wifi">Wifi</string>
    <string name="bluetooth">Bluetooth</string>





    <string name="viewGithub">View on GitHub</string>
    <string name="reportProblem">Problem Report</string>
    <string name="viewWebsite">Developer Website</string>
    <string name="actionSave">Save to Gallery</string>

    <string name="animateX">Animate X</string>
    <string name="animateY">Animate Y</string>
    <string name="animateXY">Animate XY</string>

    <string name="actionToggleValues">Toggle Values</string>
    <string name="actionToggleYValues">Toggle Y-Values</string>
    <string name="actionToggleXValues">Toggle X-Values</string>

    <string name="actionToggleIcons">Toggle Icons</string>
    <string name="actionToggleHighlight">Toggle Highlight</string>
    <string name="actionTogglePinch">Toggle PinchZoom</string>
    <string name="actionToggleAutoScale">Toggle Auto Scale</string>

    <string name="actionToggleLineValues">Toggle Line Values</string>
    <string name="actionToggleBarValues">Toggle Bar Values</string>
    <string name="actionToggleBarBorders">Toggle Bar Borders</string>
    <string name="actionToggleFilled">Toggle Filled</string>
    <string name="actionToggleCircles">Toggle Circles</string>
    <string name="actionToggleCandleShadow">Toggle Shadow Color</string>

    <string name="actionToggleCubic">Toggle Cubic</string>
    <string name="actionToggleStepped">Toggle Stepped</string>
    <string name="actionToggleHorizontalCubic">Toggle Horizontal Cubic</string>

    <string name="actionAddEntry">Add Entry</string>
    <string name="actionFeedMultiple">Add Multiple</string>
    <string name="actionRemoveEntry">Remove Entry</string>
    <string name="actionAddDataSet">Add Data Set</string>
    <string name="actionRemoveDataSet">Remove Data Set</string>
    <string name="actionClearChart">Clear chart</string>

    <string name="actionTogglePercent">Toggle Percent</string>
    <string name="actionToggleMinAngles">Toggle Minimum Angles</string>
    <string name="actionToggleHole">Toggle Hole</string>
    <string name="actionToggleCurvedSlices">Toggle Curved Slices</string>
    <string name="actionDrawCenterText">Draw Center Text</string>
    <string name="actionToggleHighlightCircle">Toggle Highlight Circle</string>
    <string name="actionToggleRotation">Toggle Rotation</string>
    <string name="actionToggleSpin">Spin Animation</string>

    <string name="dash">-</string>
    <string name="scrollViewStart">START OF SCROLLVIEW</string>
    <string name="scrollViewEnd">END OF SCROLLVIEW</string>


</resources>
